# AdventOfCode

./: LICENSE
2021/Day/1/Part/1/: Main.java
2021/Day/1/Part/2/: Main.java
2021/Day/2/Part/1/: Main.java
2021/Day/2/Part/2/: Main.java
2021/Day/3/Part/1/: Main.java
2021/Day/3/Part/2/: Main.java
2022/: pyproject.toml
2022/01/: firstStar.py  secondStar.py
2022/02/: firstStar.py  secondStar.py
2022/03/: firstStar.py  secondStar.py
2022/04/: bothStars.py  firstStar.py
2022/05/: firstStar.py  secondStar.py
2022/06/: bothStars.py  firstStar.py
2022/07/: bothStars.py  firstStar.py
2022/08/: bothStars.py  firstStar.py
2023/: pom.xml
2023/src/main/java/com/smmathews/aoc/y2023/d4/: Scratchcards.java
2024/: Cargo.toml
2024/y2024/: Cargo.toml
y2023/: pom.xml
y2023/src/main/java/com/smmathews/aoc/y2023/: Day.java  StarSolutionRunner.java  Y2023Application.java
y2023/src/main/java/com/smmathews/aoc/y2023/d1/: Trebuchet.java
y2023/src/main/java/com/smmathews/aoc/y2023/d2/: CubeConundrum.java  CubeConundrumMinDice.java  CubeConundrumPossibleGames.java
y2023/src/main/java/com/smmathews/aoc/y2023/d3/: GearRatios.java
y2023/src/main/java/com/smmathews/aoc/y2023/d4/: Scratchcards.java
y2023/src/main/java/com/smmathews/aoc/y2023/d5/: Day5.java  Fertilizer.java
y2023/src/main/java/com/smmathews/aoc/y2023/days/: Trebuchet.java
y2023/src/test/java/com/smmathews/aoc/y2023/: Y2023ApplicationTests.java
y2023/src/test/java/com/smmathews/aoc/y2023/d1/: TrebuchetTest.java
y2023/src/test/java/com/smmathews/aoc/y2023/d2/: CubeConundrumTest.java  (+2 more)
(+26 files in other folders)
