[tool.poetry]
name = "2022"
version = "0.1.0"
description = ""
authors = ["Shane M Mathews <shane.m.mathews@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyroaring = "^0.3.4"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
